--- a/src/content/blog/my-blogging-principles.mdx
+++ b/src/content/blog/my-blogging-principles.mdx
@@ -11,7 +11,7 @@ title: 내 블로그의 글쓰기 원칙
 
 인생 첫 테크? 블로그에 앞서서 앞으로 어떻게 글을 써 나갈지 컨셉을 잡아야 수월할 것 같아서 한 번 적어본다
 
-### 1 . 불친절함
+## 1 . 불친절함
 
 글을 쓰다보면 욕심이 생긴다. 더 자세하게 쓰고 싶기도 하고, 이런 저런 내용들을 추가하고 싶기도 하고,
 많은 사람들이 더 쉽게 이해했으면 좋겠고, 그런 사소한 욕심들이 생겨서 들어가는 시간과 노력이 많아진다.
@@ -23,7 +23,7 @@ title: 내 블로그의 글쓰기 원칙
 
 즉, 블로그의 모든 글들은 읽는 사람이 LLM을 사용한다고 가정하고 앞으로 글을 작성하겠다.
 
-### 2. 읽는 사람 입장에서 필요한 정보를 제공하자
+## 2. 읽는 사람 입장에서 필요한 정보를 제공하자
 
 좋은 글은 읽는 사람 입장에서 바라는걸 제공해주는걸 목표로 해야한다고 생각한다.
 
@@ -33,17 +33,17 @@ title: 내 블로그의 글쓰기 원칙
 
 글을 보는 사람들은 그 라이브러리를 통해 기능을 빠르게 시험해보고 싶어하기 때문이다.
 
-### 3. 어려운 내용은 시나리오/예시를 통해 이해시키자
+## 3. 어려운 내용은 시나리오/예시를 통해 이해시키자
 
 앞서 불친절하게 쓴다고는 했지만 이부분은 타협할 수 없다.
 
 어려운 내용을 이해할 수 있는 가장 쉬운 방법은 쉬운 예시를 드는 것이다. 내 공부법의 핵심이므로 이 부분을 통해 어려운 부분은 쉽게 풀어서 설명하겠다.
 
-### 4. 사람 냄새가 나게 쓰자
+## 4. 사람 냄새가 나게 쓰자
 
 요즘 “AI스러운" 글들이 많다. 쓰는 사람이 AI로 성의없이 만들어낸 글은 읽고 싶은 마음이 들지 않는다.
 AI한테 첨삭은 받겠지만은 내가 직접 대부분의 내용을 작성하도록 하자.
 
-### 결론
+## 결론
 
 이 블로그가 잘되던 못되던 장기간 글을 쓰는걸 목표로 해보겠다. 글을 쓰는건 다른 사람을 위해서도 있지만 내 생각을 정리하는 측면에서 나 자신한테도 도움이 많이된다. 이대로 가자!
